Enhance queue API, refactor imports & tests
Add and improve Artemis queue management endpoints (get messages, pause/resume/start/stop aliases, clear, get info) with ResponseEntity and richer responses; refactor imports/formatting across APIs. Remove unused TurSNSiteFieldExtFacetRepository injection from TurSNSiteAPI. Fix numeric literal (use 0L) in TurElasticsearch pagination calculation. Rework Solr client imports/constructors in TurSolrInstance and TurSolrInstanceProcess. Modernize and tidy many unit tests: switch to explicit AssertJ static imports, clean formatting/constructors, replace Locale instantiation with Locale.of where applicable, and add new Solr-related tests (TurSolrCacheTest, TurSolrDocumentHandlerTest, TurSolrResultProcessorTest, TurSolrTest). Miscellaneous whitespace and consistency fixes.